projects/enterprise-openshift-platform/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-web-dev
  labels:
    app.kubernetes.io/part-of: example-web
    environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
