projects/enterprise-openshift-platform/manifests/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-web
  namespace: example-web-dev
  labels:
    app.kubernetes.io/name: example-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: example-web
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
