projects/enterprise-openshift-platform/manifests/08-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-web
  namespace: example-web-dev
  labels:
    app.kubernetes.io/name: example-web
spec:
  host: example-web-dev.apps.ocp-prd.example.com
  to:
    kind: Service
    name: example-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
